--- a/src/main/resources/com/browniebytes/javafx/control/DateTimePickerPopup.fxml
+++ b/src/main/resources/com/browniebytes/javafx/control/DateTimePickerPopup.fxml
@@ -1,49 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Accordion?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<fx:root
-		type="VBox" 
-		xmlns:fx="http://javafx.com/fxml">
+<fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-border-color: gray;" type="VBox" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
 
 	<Accordion fx:id="accordion">
 		<panes>
-			<TitledPane text="Date">
-				<DatePicker fx:id="datePicker"/>
+			<TitledPane text="日期">
+				<DatePicker fx:id="datePicker" />
 			</TitledPane>
 
-			<TitledPane text="Time" fx:id="timePane">
-				<HBox alignment="CENTER" fx:id="timeButtonsPane">
-					<Button fx:id="hoursButton" onAction="#handleHoursButtonAction"/>
-					<Label text=" : "/>
-					<Button fx:id="minutesButton" onAction="#handleMinutesButtonAction"/>
-					<Label text=" : "/>
-					<Button fx:id="secondsButton" onAction="#handleSecondsButtonAction"/>
+			<TitledPane fx:id="timePane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="时间">
+				<HBox fx:id="timeButtonsPane" alignment="CENTER">
+					<Button fx:id="hoursButton" onAction="#handleHoursButtonAction" />
+					<Label text=" : " />
+					<Button fx:id="minutesButton" onAction="#handleMinutesButtonAction" />
+					<Label text=" : " />
+					<Button fx:id="secondsButton" onAction="#handleSecondsButtonAction" />
 				</HBox>
 			</TitledPane>
 		</panes>
 	</Accordion>
 	<BorderPane style="-fx-background-color:#f4f4f4;">
 		<padding>
-			<Insets bottom="5" left="5" right="5" top="5"/>
+			<Insets bottom="5" left="5" right="5" top="5" />
 		</padding>
 		<center>
-			<Button text="OK" onAction="#handleOkButtonAction">
+			<Button onAction="#handleOkButtonAction" text="确定">
 				<graphic>
 					<ImageView>
 						<image>
-							<Image url="@icons/check.png"/>
+							<Image url="@icons/check.png" />
 						</image>
 					</ImageView>
 				</graphic>
