--- a/src/main/resources/com/browniebytes/javafx/control/DateTimePicker.fxml
+++ b/src/main/resources/com/browniebytes/javafx/control/DateTimePicker.fxml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<fx:root
-		type="javafx.scene.layout.HBox" 
-		xmlns:fx="http://javafx.com/fxml">
+<fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
 
-	<TextField
-			fx:id="textField"
-			id="DateTimePicker_TextField"
-			disable="true"
-			focusTraversable="false"/>
+	<TextField id="DateTimePicker_TextField" fx:id="textField" disable="true" focusTraversable="false" maxWidth="1.7976931348623157E308" />
 
-	<Button fx:id="button" id="DateTimePicker_Button" onAction="#handleButtonAction">
+	<Button id="DateTimePicker_Button" fx:id="button" onAction="#handleButtonAction" prefHeight="25.0">
 		<graphic>
 			<ImageView>
 				<image>
-					<Image url="@icons/calendar.png"/>
+					<Image url="@icons/calendar.png" />
 				</image>
 			</ImageView>
 		</graphic>
 	</Button>
 
 	<stylesheets>
-		<URL value="@DateTimePicker.css"/>
+		<URL value="@DateTimePicker.css" />
 	</stylesheets>
 
 </fx:root>
